changed the site url

--- a/home.html
+++ b/home.html
@@ -54,14 +54,14 @@
     <meta property="og:site_name" content="Portfolio" />
     <meta
       property="og:url"
-      content="https://sidddev7.github.io/portfolio/"
+      content="https://siddhrajsinh.netlify.app/"
     />
     <meta
       property="og:description"
       content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content={siteInfo.image} />
+    <meta property="og:image" content="https://sidddev7.github.io/portfolio/assets/images/w1.png" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
