Changed the url of the iages

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
       content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://sidddev7.github.io/portfolio/assets/images/w1.png" />
+    <meta property="og:image" content="https://siddhrajsinh.netlify.app/img/info-img.jpg" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
@@ -71,7 +71,7 @@
       name="twitter:description"
       content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
-      <meta name="twitter:image" content="https://sidddev7.github.io/portfolio/assets/images/w1.png"></meta>
+      <meta name="twitter:image" content="https://siddhrajsinh.netlify.app/img/info-img.jpg"></meta>
     <meta
       name="twitter:image:alt"
       content="Siddhrajsinh Gohil Portfolio | Full Stack Developer"
