Changed the wrapify link, and changed some

--- a/home.html
+++ b/home.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
-  <!-- Mirrored from exill.dk/demo/kitzu/template/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 03 Apr 2022 02:44:49 GMT -->
-  <!-- Added by HTTrack --><meta
+  <meta
     http-equiv="content-type"
     content="text/html;charset=UTF-8"
-  /><!-- /Added by HTTrack -->
+  />
   <head>
     <link
       rel="stylesheet"
@@ -15,10 +14,7 @@
     />
     <!-- Required meta tags-->
     <meta charset="utf-8" />
-    <!-- Title-->
-    <title>Siddhrajsinh Gohil - Full Stack Developer</title>
-    <!-- Description-->
-    <meta name="description" content="Personal Portfolio Template" />
+    <title>Siddhrajsinh Gohil - Full Stack Developer from Surat</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -30,11 +26,11 @@
     />
     <meta
       name="description"
-      content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
+      content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Next.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
     <meta
       name="keywords"
-      content="Siddhraj Website,siddhrajsinh website,siddhraj gohil website,siddhraj gohil,siddhraj gohil Web Development portfolio,siddhraj gohil surat,siddhrajsinh gohil,siddhrajsinh gohil surat, web developer in surat,react developer in surat,node developer in surat,mern stack developer in surat,typescript developer in surat,mongodb expert in surat, react expert near me, node expert near me, express.js expert near me,i need react developer, i need node developer, i need mongodb expert, i need react-native developer, react native expert in surat, react native developer in surat"
+      content="Web developer in surat,Siddhrajsinh Gohil,React developer, Siddhraj gohil Web Development portfolio,siddhraj gohil surat,siddhrajsinh gohil,siddhrajsinh gohil surat, web developer in surat,react developer in surat,node developer in surat,mern stack developer in surat,typescript developer in surat,mongodb expert in surat, react expert near me, node expert near me, express.js expert near me,i need react developer, i need node developer, i need mongodb expert, i need react-native developer, react native expert in surat, react native developer in surat"
     />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -49,32 +45,32 @@
     />
     <meta
       property="og:title"
-      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer"
+      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer from surat"
     />
-    <meta property="og:site_name" content="Portfolio" />
+    <meta property="og:site_name" content="Siddhrajsinh Gohil Portfolio | Full Stack Developer" />
     <meta
       property="og:url"
-      content="https://siddhrajsinh.netlify.app/"
+      content="https://sidddev7.github.io/web-developer/home.html"
     />
     <meta
       property="og:description"
-      content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
+      content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Next.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://siddhrajsinh.netlify.app/img/info-img.jpg" />
+    <meta property="og:image" content="https://sidddev7.github.io/web-developer/img/info-img.jpg" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer"
+      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer from surat"
     />
     <meta
       name="twitter:description"
       content="I am Siddhrajsinh Gohil From surat, Full Stack Developer with Expertise in React.js, Node.js, Express.js, MongoDB, with experience in Typescript Development and React native"
     />
-      <meta name="twitter:image" content="https://siddhrajsinh.netlify.app/img/info-img.jpg"></meta>
+      <meta name="twitter:image" content="https://sidddev7.github.io/web-developer/img/info-img.jpg"></meta>
     <meta
       name="twitter:image:alt"
-      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer"
+      content="Siddhrajsinh Gohil Portfolio | Full Stack Developer from surat"
     ></meta>
     <meta
       name="google-site-verification"
@@ -920,7 +916,7 @@
                   <div class="single-item col-6 col-lg-4 photos">
                     <a
                       class="portfolio-item"
-                      href="https://wrapify-dev.netlify.app/"
+                      href="https://www.mygifty.in/"
                       data-lightbox
                     >
                       <div class="portfolio-wrapper">
@@ -930,7 +926,7 @@
                           src="img/item-2.jpg"
                         />
                         <div class="item-content">
-                          <h6 class="content-title">Wrapify</h6>
+                          <h6 class="content-title">My Gifty</h6>
                           <span class="content-more">Visit</span>
                         </div>
                       </div>
