added shiv consultancy to portfolio

--- a/home.html
+++ b/home.html
@@ -1011,25 +1011,25 @@
                     </a>
                   </div>
                   <!-- Single item-->
-                  <!-- <div class="single-item col-6 col-lg-4 brand">
+                  <div class="single-item col-6 col-lg-4 photos">
                     <a
                       class="portfolio-item"
-                      href="img/item-5.jpg"
+                      href="https://shiv-consultancy-stage.netlify.app/"
                       data-lightbox
                     >
                       <div class="portfolio-wrapper">
                         <img
                           class="img-fluid"
                           alt="Item"
-                          src="img/item-5.jpg"
+                          src="img/shiv-consultancy.jpeg"
                         />
                         <div class="item-content">
-                          <h6 class="content-title">T-Shirt Design</h6>
+                          <h6 class="content-title">Shiv Consultancy</h6>
                           <span class="content-more">Visit</span>
                         </div>
                       </div>
                     </a>
-                  </div> -->
+                  </div>
                   <!-- Single item-->
                   <!-- <div class="single-item col-6 col-lg-4 photos">
                     <a
