Added direct whatsapp and shiv technology website to portfolio

--- a/home.html
+++ b/home.html
@@ -887,6 +887,10 @@
                       <li class="list-inline-item" data-filter=".photos">
                         Full stack
                       </li>
+                      <li class="list-inline-item" data-filter=".utils">
+                        Utilities
+                      </li>
+                      
                     </ul>
                   </div>
                 </div>
@@ -991,10 +995,10 @@
                     </a>
                   </div>
                   <!-- Single item-->
-                  <div class="single-item col-6 col-lg-4 brand design">
+                  <div class="single-item col-6 col-lg-4 brand utils">
                     <a
                       class="portfolio-item"
-                      href="https://shivtechnology.netlify.app/"
+                      href="https://direct-whatsap.netlify.app/"
                       data-lightbox
                     >
                       <div class="portfolio-wrapper">
@@ -1004,12 +1008,32 @@
                           src="img/item-4.jpg"
                         />
                         <div class="item-content">
-                          <h6 class="content-title">Shiv Technology</h6>
+                          <h6 class="content-title">Direct Whatsapp</h6>
                           <span class="content-more">Visit</span>
                         </div>
                       </div>
                     </a>
                   </div>
+                     <!-- Single item-->
+                     <div class="single-item col-6 col-lg-4 brand design photos">
+                      <a
+                        class="portfolio-item"
+                        href="https://shiv-technology.netlify.app/"
+                        data-lightbox
+                      >
+                        <div class="portfolio-wrapper">
+                          <img
+                            class="img-fluid"
+                            alt="Item"
+                            src="img/shivtechnology.jpg"
+                          />
+                          <div class="item-content">
+                            <h6 class="content-title">Shiv technology</h6>
+                            <span class="content-more">Visit</span>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
                   <!-- Single item-->
                   <div class="single-item col-6 col-lg-4 photos">
                     <a
