--- a/home.html
+++ b/home.html
@@ -1014,6 +1014,26 @@
                       </div>
                     </a>
                   </div>
+                    <!-- Single item-->
+                    <div class="single-item col-6 col-lg-4 brand photos">
+                      <a
+                        class="portfolio-item"
+                        href="https://chatgpt2-theta.vercel.app/"
+                        data-lightbox
+                      >
+                        <div class="portfolio-wrapper">
+                          <img
+                            class="img-fluid"
+                            alt="Item"
+                            src="img/chatgpt2.jpg"
+                          />
+                          <div class="item-content">
+                            <h6 class="content-title">ChatGpt 2.0 </h6>
+                            <span class="content-more">Visit</span>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
                      <!-- Single item-->
                      <div class="single-item col-6 col-lg-4 brand design photos">
                       <a
