--- a/home.html
+++ b/home.html
@@ -307,7 +307,7 @@
                       <div class="d-block d-sm-flex align-items-center">
                         <a
                           class="btn content-download button-main button-scheme"
-                          href="https://drive.google.com/file/d/1dOGu3aEG_QdxDfoxvcn0Fef4nfMbZUAi/view?usp=sharing"
+                          href="https://tinly.vercel.app/siddhraj-resume-d"
                           target="_blank"
                           role="button"
                           >Download CV</a
@@ -797,7 +797,7 @@
                 <div style="margin-top: 20px; display: flex; align-content: center;" class="d-block d-sm-flex align-items-center">
                   <a
                         class="btn content-download button-main button-scheme"
-                        href="https://drive.google.com/file/d/1dOGu3aEG_QdxDfoxvcn0Fef4nfMbZUAi/view?usp=sharing"
+                        href="https://tinly.vercel.app/siddhraj-resume-d"
                         target="_blank"
                         role="button"
                         >Download CV</a
